[package]
name = "quaestor"
version = "0.1.0"
authors = ["C J Silverio <ceejceej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
colored = "1.9.0"
reqwest = "0.9.22"
serde = "1.0.103"
structopt = "0.3"
