[package]
authors = ["C J Silverio <ceejceej@gmail.com>"]
edition = "2018"
name = "quaestor"
version = "0.1.0"

[dependencies]
anyhow = "1.0.25"
base64 = "0.11.0"
colored = "1.9.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
ureq = { version = "0.11.3", features = ["json"] }
